# lab06

./: CMakeLists.txt  CPack.cmake
.github/workflows/: CPack.yaml
